@@ -2,8 +2,7 @@ package com.sofit.user.domain.mybiz.converter;
 
 import com.sofit.common.entity.mybiz.MyBizData;
 import com.sofit.user.domain.mybiz.dto.response.MyBizDashboardResponse;
-import com.sofit.user.domain.mybiz.dto.response.MyBizDashboardResponse.CashFlowTrendResponse;
-import com.sofit.user.domain.mybiz.dto.response.MyBizDashboardResponse.IndustryCompareResponse;
+import com.sofit.user.domain.mybiz.dto.response.MyBizDashboardResponse.PaymentFlowTrendResponse;
 import com.sofit.user.domain.mybiz.dto.response.MyBizDashboardResponse.RevenueTrendResponse;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,12 +20,11 @@ class MyBizConverterTest {
     // --- 헬퍼 메서드 ---
 
     private MyBizData createMyBizData(LocalDate referenceMonth, Long monthlyRevenue,
-                                       BigDecimal monthlyRevenueGrowthRate, Long cashFlow,
-                                       Long estimatedProfit, Long monthlyInflow, Long monthlyOutflow,
+                                       Long monthlyOutflow, Long estimatedProfit,
                                        BigDecimal reviewRating, Integer reviewCount,
                                        BigDecimal onlineReorderRate, Integer deliveryOrderCount,
                                        BigDecimal industrySalesRank, BigDecimal industryProfitRank,
-                                       BigDecimal industryStabilityRank) {
+                                       BigDecimal industrySatisfactionRank) {
         MyBizData data;
         try {
             var constructor = MyBizData.class.getDeclaredConstructor();
@@ -37,31 +35,24 @@ class MyBizConverterTest {
         }
         ReflectionTestUtils.setField(data, "referenceMonth", referenceMonth);
         ReflectionTestUtils.setField(data, "monthlyRevenue", monthlyRevenue);
-        ReflectionTestUtils.setField(data, "prevMonthRevenue", monthlyRevenue);
-        ReflectionTestUtils.setField(data, "monthlyRevenueGrowthRate", monthlyRevenueGrowthRate);
-        ReflectionTestUtils.setField(data, "cashFlow", cashFlow);
-        ReflectionTestUtils.setField(data, "estimatedProfit", estimatedProfit);
-        ReflectionTestUtils.setField(data, "monthlyInflow", monthlyInflow);
         ReflectionTestUtils.setField(data, "monthlyOutflow", monthlyOutflow);
+        ReflectionTestUtils.setField(data, "estimatedProfit", estimatedProfit);
         ReflectionTestUtils.setField(data, "reviewRating", reviewRating);
         ReflectionTestUtils.setField(data, "reviewCount", reviewCount);
         ReflectionTestUtils.setField(data, "onlineReorderRate", onlineReorderRate);
         ReflectionTestUtils.setField(data, "deliveryOrderCount", deliveryOrderCount);
         ReflectionTestUtils.setField(data, "industrySalesRank", industrySalesRank);
         ReflectionTestUtils.setField(data, "industryProfitRank", industryProfitRank);
-        ReflectionTestUtils.setField(data, "industryStabilityRank", industryStabilityRank);
+        ReflectionTestUtils.setField(data, "industrySatisfactionRank", industrySatisfactionRank);
         return data;
     }
 
     private MyBizData createBaseData() {
-        return createMyBizData(
+        MyBizData data = createMyBizData(
                 LocalDate.of(2024, 5, 1),
                 15000000L,
-                new BigDecimal("12.50"),
-                3000000L,
-                2000000L,
-                10000000L,
                 7000000L,
+                2000000L,
                 new BigDecimal("4.5"),
                 120,
                 new BigDecimal("35.20"),
@@ -70,6 +61,9 @@ class MyBizConverterTest {
                 new BigDecimal("30.00"),
                 new BigDecimal("20.00")
         );
+        ReflectionTestUtils.setField(data, "prevMonthRevenue", 13000000L);
+        ReflectionTestUtils.setField(data, "monthlyProfitGrowthRate", new BigDecimal("5.50"));
+        return data;
     }
 
     // --- 테스트 ---
@@ -79,22 +73,20 @@ class MyBizConverterTest {
     void toMyBizDashboardResponse_mapsBaseDataFieldsCorrectly() {
         // given
         MyBizData baseData = createBaseData();
-        List<MyBizData> revenueTrend = Collections.emptyList();
-        List<MyBizData> cashFlowTrend = Collections.emptyList();
+        List<MyBizData> sixMonthTrend = Collections.emptyList();
+        List<LocalDate> availableMonths = List.of(LocalDate.of(2024, 5, 1));
+        BigDecimal monthlyRevenueGrowthRate = new BigDecimal("15.38");
 
         // when
         MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
-                baseData, revenueTrend, cashFlowTrend, List.of());
+                baseData, sixMonthTrend, availableMonths, monthlyRevenueGrowthRate);
 
         // then
         assertThat(response.monthlyRevenue()).isEqualTo(15000000L);
-        assertThat(response.monthlyRevenueGrowthRate()).isEqualByComparingTo(new BigDecimal("12.50"));
-        assertThat(response.cashFlow()).isEqualTo(3000000L);
+        assertThat(response.monthlyRevenueGrowthRate()).isEqualByComparingTo(new BigDecimal("15.38"));
         assertThat(response.estimatedProfit()).isEqualTo(2000000L);
         assertThat(response.reviewRating()).isEqualByComparingTo(new BigDecimal("4.5"));
         assertThat(response.reviewCount()).isEqualTo(120);
-        assertThat(response.onlineReorderRate()).isEqualByComparingTo(new BigDecimal("35.20"));
-        assertThat(response.deliveryOrderCount()).isEqualTo(85);
     }
 
     @Test
@@ -102,10 +94,11 @@ class MyBizConverterTest {
     void toMyBizDashboardResponse_formatsReferenceMonthAsYearMonth() {
         // given
         MyBizData baseData = createBaseData(); // referenceMonth = 2024-05-01
+        List<LocalDate> availableMonths = List.of(LocalDate.of(2024, 5, 1));
 
         // when
         MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
-                baseData, Collections.emptyList(), Collections.emptyList(), List.of());
+                baseData, Collections.emptyList(), availableMonths, null);
 
         // then
         assertThat(response.referenceMonth()).isEqualTo("2024-05");
@@ -119,20 +112,21 @@ class MyBizConverterTest {
         MyBizData baseData = createBaseData();
 
         MyBizData trend1 = createMyBizData(
-                LocalDate.of(2024, 3, 1), 12000000L, null, null, null,
-                null, null, null, null, null, null, null, null, null);
+                LocalDate.of(2024, 3, 1), 12000000L, null, null,
+                null, null, null, null, null, null, null);
         MyBizData trend2 = createMyBizData(
-                LocalDate.of(2024, 4, 1), 13500000L, null, null, null,
-                null, null, null, null, null, null, null, null, null);
+                LocalDate.of(2024, 4, 1), 13500000L, null, null,
+                null, null, null, null, null, null, null);
         MyBizData trend3 = createMyBizData(
-                LocalDate.of(2024, 5, 1), 15000000L, null, null, null,
-                null, null, null, null, null, null, null, null, null);
+                LocalDate.of(2024, 5, 1), 15000000L, null, null,
+                null, null, null, null, null, null, null);
 
-        List<MyBizData> revenueTrendData = List.of(trend1, trend2, trend3);
+        List<MyBizData> sixMonthTrendData = List.of(trend1, trend2, trend3);
+        List<LocalDate> availableMonths = List.of(LocalDate.of(2024, 5, 1));
 
         // when
         MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
-                baseData, revenueTrendData, Collections.emptyList(), List.of());
+                baseData, sixMonthTrendData, availableMonths, null);
 
         // then
         List<RevenueTrendResponse> revenueTrend = response.revenueTrend();
@@ -149,59 +143,111 @@ class MyBizConverterTest {
     }
 
     @Test
-    @DisplayName("toMyBizDashboardResponse - cashFlowTrend 리스트가 정확히 변환된다")
-    void toMyBizDashboardResponse_mapsCashFlowTrendCorrectly() {
+    @DisplayName("toMyBizDashboardResponse - paymentFlowTrend 리스트가 정확히 변환된다")
+    void toMyBizDashboardResponse_mapsPaymentFlowTrendCorrectly() {
         // given
         MyBizData baseData = createBaseData();
 
-        MyBizData cashFlow1 = createMyBizData(
-                LocalDate.of(2024, 3, 1), null, null, null, null,
-                8000000L, 6000000L, null, null, null, null, null, null, null);
-        MyBizData cashFlow2 = createMyBizData(
-                LocalDate.of(2024, 4, 1), null, null, null, null,
-                9000000L, 6500000L, null, null, null, null, null, null, null);
-        MyBizData cashFlow3 = createMyBizData(
-                LocalDate.of(2024, 5, 1), null, null, null, null,
-                10000000L, 7000000L, null, null, null, null, null, null, null);
+        MyBizData flow1 = createMyBizData(
+                LocalDate.of(2024, 3, 1), 8000000L, 6000000L, 2000000L,
+                null, null, null, null, null, null, null);
+        MyBizData flow2 = createMyBizData(
+                LocalDate.of(2024, 4, 1), 9000000L, 6500000L, 2500000L,
+                null, null, null, null, null, null, null);
+        MyBizData flow3 = createMyBizData(
+                LocalDate.of(2024, 5, 1), 10000000L, 7000000L, 3000000L,
+                null, null, null, null, null, null, null);
 
-        List<MyBizData> cashFlowTrendData = List.of(cashFlow1, cashFlow2, cashFlow3);
+        List<MyBizData> sixMonthTrendData = List.of(flow1, flow2, flow3);
+        List<LocalDate> availableMonths = List.of(LocalDate.of(2024, 5, 1));
 
         // when
         MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
-                baseData, Collections.emptyList(), cashFlowTrendData, List.of());
+                baseData, sixMonthTrendData, availableMonths, null);
 
         // then
-        List<CashFlowTrendResponse> cashFlowTrend = response.cashFlowTrend();
-        assertThat(cashFlowTrend).hasSize(3);
+        List<PaymentFlowTrendResponse> paymentFlowTrend = response.paymentFlowTrend();
+        assertThat(paymentFlowTrend).hasSize(3);
 
-        assertThat(cashFlowTrend.get(0).referenceMonth()).isEqualTo("2024-03");
-        assertThat(cashFlowTrend.get(0).monthlyInflow()).isEqualTo(8000000L);
-        assertThat(cashFlowTrend.get(0).monthlyOutflow()).isEqualTo(6000000L);
+        assertThat(paymentFlowTrend.get(0).referenceMonth()).isEqualTo("2024-03");
+        assertThat(paymentFlowTrend.get(0).monthlyRevenue()).isEqualTo(8000000L);
+        assertThat(paymentFlowTrend.get(0).monthlyOutflow()).isEqualTo(6000000L);
+        assertThat(paymentFlowTrend.get(0).estimatedProfit()).isEqualTo(2000000L);
 
-        assertThat(cashFlowTrend.get(1).referenceMonth()).isEqualTo("2024-04");
-        assertThat(cashFlowTrend.get(1).monthlyInflow()).isEqualTo(9000000L);
-        assertThat(cashFlowTrend.get(1).monthlyOutflow()).isEqualTo(6500000L);
+        assertThat(paymentFlowTrend.get(1).referenceMonth()).isEqualTo("2024-04");
+        assertThat(paymentFlowTrend.get(1).monthlyRevenue()).isEqualTo(9000000L);
+        assertThat(paymentFlowTrend.get(1).monthlyOutflow()).isEqualTo(6500000L);
+        assertThat(paymentFlowTrend.get(1).estimatedProfit()).isEqualTo(2500000L);
 
-        assertThat(cashFlowTrend.get(2).referenceMonth()).isEqualTo("2024-05");
-        assertThat(cashFlowTrend.get(2).monthlyInflow()).isEqualTo(10000000L);
-        assertThat(cashFlowTrend.get(2).monthlyOutflow()).isEqualTo(7000000L);
+        assertThat(paymentFlowTrend.get(2).referenceMonth()).isEqualTo("2024-05");
+        assertThat(paymentFlowTrend.get(2).monthlyRevenue()).isEqualTo(10000000L);
+        assertThat(paymentFlowTrend.get(2).monthlyOutflow()).isEqualTo(7000000L);
+        assertThat(paymentFlowTrend.get(2).estimatedProfit()).isEqualTo(3000000L);
     }
 
     @Test
-    @DisplayName("toMyBizDashboardResponse - industryCompare 필드가 정확히 매핑된다")
+    @DisplayName("toMyBizDashboardResponse - 업종/상권 비교 필드가 정확히 매핑된다")
     void toMyBizDashboardResponse_mapsIndustryCompareCorrectly() {
         // given
         MyBizData baseData = createBaseData();
+        List<LocalDate> availableMonths = List.of(LocalDate.of(2024, 5, 1));
 
         // when
         MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
-                baseData, Collections.emptyList(), Collections.emptyList(), List.of());
+                baseData, Collections.emptyList(), availableMonths, null);
 
         // then
-        IndustryCompareResponse industryCompare = response.industryCompare();
-        assertThat(industryCompare).isNotNull();
-        assertThat(industryCompare.industrySalesRank()).isEqualByComparingTo(new BigDecimal("25.00"));
-        assertThat(industryCompare.industryProfitRank()).isEqualByComparingTo(new BigDecimal("30.00"));
-        assertThat(industryCompare.industryStabilityRank()).isEqualByComparingTo(new BigDecimal("20.00"));
+        assertThat(response.industrySalesRank()).isEqualByComparingTo(new BigDecimal("25.00"));
+        assertThat(response.industryProfitRank()).isEqualByComparingTo(new BigDecimal("30.00"));
+        assertThat(response.industrySatisfactionRank()).isEqualByComparingTo(new BigDecimal("20.00"));
+    }
+
+    @Test
+    @DisplayName("calculateMonthlyRevenueGrowthRate - 정상 계산")
+    void calculateMonthlyRevenueGrowthRate_returnsCorrectValue() {
+        // when
+        BigDecimal result = MyBizConverter.calculateMonthlyRevenueGrowthRate(11000000L, 10000000L);
+
+        // then
+        assertThat(result).isEqualByComparingTo(new BigDecimal("10.00"));
+    }
+
+    @Test
+    @DisplayName("calculateMonthlyRevenueGrowthRate - prevMonthRevenue가 null이면 null 반환")
+    void calculateMonthlyRevenueGrowthRate_returnsNullWhenPrevIsNull() {
+        // when
+        BigDecimal result = MyBizConverter.calculateMonthlyRevenueGrowthRate(11000000L, null);
+
+        // then
+        assertThat(result).isNull();
+    }
+
+    @Test
+    @DisplayName("calculateMonthlyRevenueGrowthRate - prevMonthRevenue가 0이면 null 반환")
+    void calculateMonthlyRevenueGrowthRate_returnsNullWhenPrevIsZero() {
+        // when
+        BigDecimal result = MyBizConverter.calculateMonthlyRevenueGrowthRate(11000000L, 0L);
+
+        // then
+        assertThat(result).isNull();
+    }
+
+    @Test
+    @DisplayName("toMyBizDashboardResponse - availableMonths가 정확히 변환된다")
+    void toMyBizDashboardResponse_mapsAvailableMonthsCorrectly() {
+        // given
+        MyBizData baseData = createBaseData();
+        List<LocalDate> availableMonths = List.of(
+                LocalDate.of(2024, 5, 1),
+                LocalDate.of(2024, 4, 1),
+                LocalDate.of(2024, 3, 1)
+        );
+
+        // when
+        MyBizDashboardResponse response = MyBizConverter.toMyBizDashboardResponse(
+                baseData, Collections.emptyList(), availableMonths, null);
+
+        // then
+        assertThat(response.availableMonths()).containsExactly("2024-05", "2024-04", "2024-03");
     }
 }
